--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
@@ -33,7 +32,7 @@
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-        <a href="{{ site.github.release_url }}" class="btn">Download</a>
+        <a href="{{ site.github.latest_release_url }}" class="btn">Download</a>
       {% endif %}
     </header>
 
