--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,9 +26,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% if site.show_downloads %}
-        <a href="{{ site.github.releases_url }}" class="btn">Download Release</a>
-      {% endif %}
+      <a href="https://pua.imhes.ml/?/Skill/Books/lastest%20release/pua-books.zip" class="btn">Download Books</a>
     </header>
 
     <main id="content" class="main-content" role="main">
