--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,6 +27,7 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <a href="https://pua.imhes.ml/?/Skill/Books/lastest%20release/pua-books.zip" class="btn">Download Books</a>
+      <a href="https://pua.imhes.ml/" class="btn">Download Site</a>
     </header>
 
     <main id="content" class="main-content" role="main">
