--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,8 +26,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="https://pua.imhes.ml/?/Skill/Books/lastest%20release/pua-books.zip" class="btn">Download Books</a>
-      <a href="https://pua.imhes.ml/" class="btn" target="_blank">Download Other</a>
+      <a href="https://pua.imhes.ml/?/Skill/Books/lastest%20release/pua-books.zip" class="btn">打包下载</a>
+      <a href="https://pua.imhes.ml/?/Skill/" class="btn" target="_blank">其它资料下载</a>
+      <a href="https://pua.imhes.ml/" class="btn" target="_blank">下载站</a>
     </header>
 
     <main id="content" class="main-content" role="main">
