--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,8 +26,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="https://pua.imhes.ml/?/Skill/Books/lastest%20release/pua-books.zip" class="btn">打包下载</a>
-      <a href="https://pua.imhes.ml/?/Skill/" class="btn" target="_blank">其它资料下载</a>
+      <a href="https://pua.imhes.ml/?/Skill/188%E4%B9%B0%E7%9A%84%E6%8A%8A%E5%A6%B9%E6%95%99%E7%A8%8B%E7%A7%98%E7%B1%8D/%E6%B3%A1%E5%A6%9E%E7%A7%98%E7%B1%8D%EF%BC%9A%E5%AE%8C%E6%95%B4%E5%8C%85%E8%A3%85%E5%95%86%E4%B8%9A%E7%89%88.rar" class="btn">打包下载</a>
+      <a href="https://pua.imhes.ml/?/Skill/188%E4%B9%B0%E7%9A%84%E6%8A%8A%E5%A6%B9%E6%95%99%E7%A8%8B%E7%A7%98%E7%B1%8D/" class="btn">推荐下载</a>
+      <a href="https://pua.imhes.ml/?/Skill/" class="btn" target="_blank">同类资料下载</a>
       <a href="https://pua.imhes.ml/" class="btn" target="_blank">下载站</a>
     </header>
 
